# gtk_socket_plug_repro

c_works/: Makefile  main.c
rust_broken/: Cargo.toml
rust_broken/src/: main.rs
