[package]
name = "gtk_socket_plug_repro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = "0.15.1"
gio = "0.15.1"
glib = "0.15.1"
gtk = "0.15.1"
gdk = "0.15.1"
gdk-sys = "0.15.1"
gdkx11 = "0.15.1"
gdkx11-sys = "0.15.1"
pango = "0.15.1"


